create logical skeleton for open-orders/orders-history components

--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -64,6 +64,7 @@
 
   </tbody>
 </table>
+<ng-content></ng-content>
 <div class="row" style="margin: 0 16px;">
   <ul class="paginator" style="margin-left: auto;">
     <pagination-controls (pageChange)="filterOpenOrders($event)" [previousLabel]="''" [nextLabel]="''"></pagination-controls>
