--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -200,21 +200,21 @@
         <div class="wrap-input orders__datepicker">
           <label class="wrap-input__label" for="">From</label>
 
-          <!--<my-date-picker-->
-            <!--name="from"-->
-            <!--[options]="myDatePickerOptions"-->
-          <!--&gt;-->
-          <!--</my-date-picker>-->
+          <my-date-picker name="from"
+          [options]="myDatePickerOptions"
+          [(ngModel)]="modelDateFrom"
+          (inputFieldChanged)="onFromInputFieldChanged($event)"></my-date-picker>
+          
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
         <div class="wrap-input orders__datepicker">
           <label class="wrap-input__label" for="">To</label>
 
-          <!--<my-date-picker-->
-            <!--name="to"-->
-            <!--[options]="myDatePickerOptions"-->
-          <!--&gt;-->
-          <!--</my-date-picker>-->
+          <my-date-picker
+          name="to"
+          [options]="myDatePickerOptions"
+          [(ngModel)]="modelDateTo"
+          (inputFieldChanged)="onToInputFieldChanged($event)">></my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
       </div>
@@ -400,12 +400,12 @@
     <div class="row row--aic" style="margin: 0 16px;">
       <div class="show-filter">
         Showing <span>1</span> to
-        <div class="dropdown">
+        <div class="dropdown" #dropdown (click)="toggleDropdown($event)">
           <div class="dropdown__btn">14</div>
           <ul class="dropdown__list">
-            <li class="dropdown__item">24</li>
-            <li class="dropdown__item">34</li>
-            <li class="dropdown__item">44</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">24</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">34</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">44</li>
           </ul>
         </div>
         of <span>192</span> entries.
