add mob and desktop balance

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
       <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" href="#"><span class="menu__link-text">Funds</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">Lorem asdfgh</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">Lorem asdfgh</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="balance"><span class="menu__link-text">Balance</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">Transaction history</span></a></li>
           </ul>
         </div>
       </li>
