--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -88,7 +88,7 @@
       </h1>
     </div>
     <form action="">
-      <div class="row orders__filter">
+      <div class="row orders__filters">
         <div class="wrap-input wrap-input--with-icon orders__search">
           <input class="wrap-input__input" type="text" required>
           <label class="wrap-input__label" for="">Currency</label>
