--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -40,6 +40,10 @@
   }
   /*--- modificators start ---*/
   // states
+  &--hidden{
+    visibility: hidden;
+    transition: none;
+  }
   &--active {
     color: #fff;
     border-color: transparent;
