--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,6 +24,7 @@
 @import "components/notification-popup";
 @import "components/steps";
 @import "components/tabs";
+@import "components/counter";
 @import "components/chat-btn";
 @import "components/back-to";
 @import "components/overlay";
@@ -43,6 +44,7 @@
 /*--- PAGES ---*/
 @import "pages/login-registration";
 @import "pages/dashboard";
+@import "pages/balance";
 @import "pages/orders";
 @import "pages/referral";
 @import "pages/settings/settings";
