--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -185,7 +185,7 @@
       </button>
     </div>
     <form action="">
-      <div class="row orders__filter">
+      <div class="row orders__filters">
         <div class="wrap-input wrap-input--with-icon orders__search">
           <input class="wrap-input__input" type="text" required>
           <label class="wrap-input__label" for="">Currency</label>
