--- a/src/assets/scss/components/_page-title.scss
+++ b/src/assets/scss/components/_page-title.scss
@@ -1,31 +1,4 @@
 
-
-.page-title__button-wrap {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  width: 100%;
-}
-
-.page-title__button {
-  margin-left: 12px;
-  font-size: 14px;
-
-  &:first-child {
-    margin-left: 0;
-  }
-  @media (min-width:600px) {
-    margin-left: 32px;
-  }
-  @media (min-width:900px) {
-    font-size: 18px;
-
-    &:first-child {
-      margin-left: 32px;
-    }
-  }
-}
-/*NEW*/
 .page-title {
   display: -webkit-flex;
   display: -ms-flex;
@@ -44,18 +17,16 @@
   /*--- modificators end ---*/
 }
 /*--- media start ---*/
-@media (min-width:600px) {
-  .page-title {}
-}
 @media (min-width:900px) {
-  .page-title {
-    flex-direction: row;
-
-  }
+  //.page-title {
+  //  flex-direction: row;
+  //
+  //}
 }
 @media (min-width:1200px) {
   .page-title {
     padding: 0;
+    flex-direction: row;
     &__text{
       font-size: 36px;
       line-height: 42px;
