--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -54,14 +54,14 @@
     &__title-btn{
       margin-left: 32px;
     }
-    &__filter{
+    &__filters{
       position: relative;
       margin-top: 28px;
       &:after{
         content: '';
         display: block;
         position: absolute;
-        bottom: 1px;
+        bottom: 0px;
         z-index: -1;
         width: 100%;
         height: 1px;
@@ -143,7 +143,7 @@
 @media (min-width:1200px) {
   .dark-theme{
     .orders{
-      &__filter{
+      &__filters{
         &:after{
           z-index: 0;
           background-color: $light-blue;
@@ -159,6 +159,9 @@
         color:$light-blue;
       }
       &__comission-usd{
+        color:$light-blue;
+      }
+      .show-filter{
         color:$light-blue;
       }
     }
