--- a/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
@@ -9,6 +9,7 @@
 <img class="modal__qr-code" [src]="getGoogleAuthenticatorUrl()">
 
 <!--SECRET HASH-->
+  <p>{{'Save a backup of your recovery key'}}</p>
 <div class="modal__row">
   <div class="modal__code-grey-field">{{ secretCode }}</div>
 </div>
