added 2 fa google

--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -14,7 +14,7 @@
     <div class="wrap-input passport-form__input">
       <input
         class="wrap-input__input"
-        type="text"
+        type="password"
         formControlName="password">
       <label class="wrap-input__label">Your password</label>
       <div class="wrap-input__line"></div>
