--- a/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
@@ -1,4 +1,4 @@
-<div class="currency-pair-info" *ngIf="true">
+<div class="currency-pair-info" *ngIf="pair">
   <div class="currency-pair-info__inner">
     <div class="currency-pair-info__pair">
       <div class="dropdown currency-pair-info__dropdown">
