--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -113,7 +113,7 @@
   }
 
   &__message {
-    display: none;
+    display: block;
     margin-top: 4px;
     text-align: left;
     font-size: 12px;
