--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -143,7 +143,7 @@
         <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
       </tr>
       </thead>
-      <tbody class="table__body">
+      <tbody class="table__body" *ngIf="openOrders">
         <tr class="table__row" *ngFor="let item of openOrders | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
             <td class="table__cell">
               <span>{{item.id}}</span>
