--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -747,7 +747,7 @@
   flex-direction: column;
 
   &__wrap-hidden-links {
-    display: block;
+    display: none;
 
     &--show {
       display: block;
