--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -72,14 +72,21 @@
           <span class="txt-small txt-red">–0.24%</span>
         </td>
         <td class="table__cell table__cell--arr-mob">
-          <img class="" src="../../assets/img/arr-toggler-right-blue.svg">
+          <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="4">
+          <div class="table__row-mob-line"></div>
         </td>
       </tr>
 
       </tbody>
     </table>
     <!--table-mob end-->
-    <div class="balance__request-mob">
+    <div class="balance__request-mob-link">
       <span>5</span>Pending  requests
       <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5.24264 0.757359L9.48528 5L5.24264 9.24264" stroke-linecap="round" stroke-linejoin="round"/>
@@ -87,7 +94,7 @@
 
     </div>
     <!--open mob-balance start-->
-    <div class="open-mob-balance">
+    <div class="open-mob-balance" style="display: none;">
       <div class="open-mob-balance__header">
         <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
@@ -236,6 +243,204 @@
       </div>
     </div>
     <!--open mob-balance end-->
+    <!--mob-request start-->
+    <div class="balance__request-mob" style="display: none;">
+      <div class="balance__request-mob-header">
+        <h6>Pending Requests</h6>
+        <span>
+          <svg width="15" height="15" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.70711 0.292894C1.31658 -0.0976307 0.683419 -0.0976313 0.292894 0.292893C-0.0976307 0.683416 -0.0976313 1.31658 0.292893 1.70711L1.70711 0.292894ZM15.2929 16.7071C15.6834 17.0976 16.3166 17.0976 16.7071 16.7071C17.0976 16.3166 17.0976 15.6834 16.7071 15.2929L15.2929 16.7071ZM16.7071 1.70711C17.0976 1.31658 17.0976 0.683416 16.7071 0.292893C16.3166 -0.0976313 15.6834 -0.0976307 15.2929 0.292894L16.7071 1.70711ZM0.292921 15.2929C-0.097603 15.6834 -0.0976024 16.3166 0.292922 16.7071C0.683447 17.0976 1.31661 17.0976 1.70714 16.7071L0.292921 15.2929ZM0.292893 1.70711L7.79289 9.20712L9.20711 7.79291L1.70711 0.292894L0.292893 1.70711ZM7.79289 9.20712L15.2929 16.7071L16.7071 15.2929L9.20711 7.79291L7.79289 9.20712ZM15.2929 0.292894L7.79289 7.79291L9.20711 9.20712L16.7071 1.70711L15.2929 0.292894ZM7.79289 7.79291L0.292921 15.2929L1.70714 16.7071L9.20711 9.20712L7.79289 7.79291Z"/>
+          </svg>
+        </span>
+      </div>
+      <table class="table table--mob">
+        <thead class="table__head">
+        <tr class="table__head-row">
+          <th class="table__cell-head table__cell-head--tal">Date / Type</th>
+          <th class="table__cell-head table__cell-head--tal">Currency</th>
+          <th class="table__cell-head table__cell-head--tar">Amount</th>
+        </tr>
+        </thead>
+        <tbody class="table__body table__body--none-shadow">
+
+        <tr class="table__row--mob">
+          <td class="table__cell table__cell--tal">
+            <div><span class="arr arr--mr4 arr--red"></span><span>Withdraw</span></div>
+            <div class="balance__request-mob-date">
+              <div>Th 13.06.2018</div>
+              <div>10:59:41</div>
+            </div>
+          </td>
+          <td class="table__cell table__cell--tal">
+            <div class="balance__currency">
+              <div class="balance__currency-icon">
+                <img src="../../assets/img/btc-icon.svg">
+              </div>
+              <div>
+                <span>BTC</span>
+              </div>
+            </div>
+          </td>
+          <td class="table__cell table__cell--tar">
+            0.003000100
+          </td>
+          <td class="table__cell table__cell--arr-mob">
+            <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <div class="table__row-mob-line"></div>
+          </td>
+        </tr>
+        <tr class="table__row--mob">
+          <td class="table__cell table__cell--tal">
+            <div><span class="arr arr--mr4 arr--green"></span><span>Refill</span></div>
+            <div class="balance__request-mob-date">
+              <div>Th 13.06.2018</div>
+              <div>10:59:41</div>
+            </div>
+          </td>
+          <td class="table__cell table__cell--tal">
+            <div class="balance__currency">
+              <div class="balance__currency-icon">
+                <img src="../../assets/img/btc-icon.svg">
+              </div>
+              <div>
+                <span>BTC</span>
+              </div>
+            </div>
+          </td>
+          <td class="table__cell table__cell--tar">
+            0.003000100
+          </td>
+          <td class="table__cell table__cell--arr-mob">
+            <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <div class="table__row-mob-line"></div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <!--mob-request end-->
+    <!--open mob-request start-->
+    <div class="open-mob-request" style="display: none;">
+      <div class="open-mob-request__header">
+        <div>
+          <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
+          </svg>
+          to: Pending Requests
+        </div>
+        <span>
+          <svg width="15" height="15" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.70711 0.292894C1.31658 -0.0976307 0.683419 -0.0976313 0.292894 0.292893C-0.0976307 0.683416 -0.0976313 1.31658 0.292893 1.70711L1.70711 0.292894ZM15.2929 16.7071C15.6834 17.0976 16.3166 17.0976 16.7071 16.7071C17.0976 16.3166 17.0976 15.6834 16.7071 15.2929L15.2929 16.7071ZM16.7071 1.70711C17.0976 1.31658 17.0976 0.683416 16.7071 0.292893C16.3166 -0.0976313 15.6834 -0.0976307 15.2929 0.292894L16.7071 1.70711ZM0.292921 15.2929C-0.097603 15.6834 -0.0976024 16.3166 0.292922 16.7071C0.683447 17.0976 1.31661 17.0976 1.70714 16.7071L0.292921 15.2929ZM0.292893 1.70711L7.79289 9.20712L9.20711 7.79291L1.70711 0.292894L0.292893 1.70711ZM7.79289 9.20712L15.2929 16.7071L16.7071 15.2929L9.20711 7.79291L7.79289 9.20712ZM15.2929 0.292894L7.79289 7.79291L9.20711 9.20712L16.7071 1.70711L15.2929 0.292894ZM7.79289 7.79291L0.292921 15.2929L1.70714 16.7071L9.20711 9.20712L7.79289 7.79291Z"/>
+          </svg>
+        </span>
+      </div>
+      <table class="table table--mob">
+        <tbody class="table__body table__body--none-shadow">
+
+        <tr class="table__row--mob">
+          <td class="table__cell table__cell--tal">
+            <div><span class="arr arr--mr4 arr--red"></span><span>Withdraw</span></div>
+            <div class="balance__request-mob-date">
+              <div>Th 13.06.2018</div>
+              <div>10:59:41</div>
+            </div>
+          </td>
+          <td class="table__cell table__cell--tal">
+            <div class="balance__currency">
+              <div class="balance__currency-icon">
+                <img src="../../assets/img/btc-icon.svg">
+              </div>
+              <div>
+                <span>BTC</span>
+              </div>
+            </div>
+          </td>
+          <td class="table__cell table__cell--tar">
+            0.003000100
+          </td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <div class="table__row-mob-line"></div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+      <div class="open-mob-request__item">
+        <div class="open-mob-request__item-title">Comission</div>
+        <div class="open-mob-request__item-value">0.02% ~ 200 000</div>
+      </div>
+      <div class="open-mob-request__item">
+        <div class="open-mob-request__item-title">Payment system</div>
+        <div class="open-mob-request__item-value">CIMB NAGA</div>
+      </div>
+      <div class="open-mob-request__item">
+        <div class="open-mob-request__item-title">Status</div>
+        <div class="open-mob-request__item-value">Awaits payment</div>
+      </div>
+      <div class="open-mob-request__btn-wrap">
+        <!--<button class="btn">I paid</button>-->
+        <button class="btn btn--error">Rejected</button>
+        <button class="btn btn--empty-blue">Revoke</button>
+      </div>
+    </div>
+    <!--open mob-request end-->
+    <!--request-status-info start-->
+    <div class="request-status-info" style="display: none;">
+      <div class="request-status-info__header">
+        <div>
+          <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
+          </svg>
+          Request info
+        </div>
+      </div>
+      <table class="table table--mob">
+        <thead class="table__head">
+        <tr class="table__head-row">
+          <th class="table__cell-head table__cell-head--tal">Id</th>
+          <th class="table__cell-head table__cell-head--tal">Status</th>
+        </tr>
+        </thead>
+        <tbody class="table__body table__body--none-shadow">
+        <tr class="table__row--mob">
+          <td class="table__cell table__cell--tal">
+            1998500374
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span class="txt-red">Rejected</span>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+      <div class="request-status-info__text">
+        Your payment was declined because of the administrator's harmfulness.
+        <br>
+        <br>
+        If you want to punish him with brute force - act
+      </div>
+      <div class="note request-status-info__note ">
+        <ul class="note__list">
+          <li class="note__list-item">
+            Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.
+          </li>
+        </ul>
+        <a href="#" class="link request-status-info__link">support@exrates.me</a>
+      </div>
+    </div>
+    <!--request-status-info end-->
   </div>
   <!--balance-mob end-->
   <!--balance-desktop start-->
@@ -408,7 +613,7 @@
     </table>
     <!--table end-->
     <!--paginator start-->
-    <div class="row row--aic" style="margin: 0 16px;">
+    <div class="row row--aic" style="margin: 20px 16px 0;">
       <div class="show-filter">
         Showing <span>1</span> to
         <div class="dropdown">
