start mobile registration

--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -61,7 +61,7 @@
       <a class="popup__link popup__link--hidden-mob" href="reg-email.html">Go to registration form</a>
       <a class="popup__link" href="fgt.html">Forgot password?</a>
     </div>
-    <a class="popup__link-mob">Registration</a>
+    <a class="popup__link-mob" (click)="openRegistration()">Registration</a>
     <!--<a class="popup__link-mob" (click)="openRegistration()">Registration</a>-->
     </ng-template>
 
