--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -7,25 +7,25 @@
     </ng-template>
 
 
-<ng-template #emailInputTemplate>
+    <ng-template #emailInputTemplate>
     <h6 class="popup__title">Registration</h6>
-    <h4 class="popup__subtitle"></h4>
-    <form class="popup__form">
+    <h4 class="popup__subtitle">{{emailMessage}}</h4>
+    <form class="popup__form" [formGroup]="emailForm">
       <div >
         <div class="wrap-input popup__wrap-input">
           <input
             class="wrap-input__input"
-            type="text"
+            formControlName="email"
+            [ngClass]="{'input--error': !emailForm.get('email').valid && emailForm.get('email').touched}"
           >
           <label class="wrap-input__label" for="">Email</label>
           <div class="wrap-input__line"></div>
           <!--Input error section starts-->
-          <div>
-            <span class="wrap-input__message">
+          <div *ngIf="!emailForm.valid && emailSubmited">
+            <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['required']">
               This field is required.
             </span>
-            <span
-              class="wrap-input__message">
+            <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['pattern']">
               Please, enter valid email address.
             </span>
           </div>
@@ -33,13 +33,11 @@
         </div>
       </div>
 
-      <button class="btn popup__btn" >Create an account</button>
+      <button class="btn popup__btn" (click)="emailSubmit()">Create an account</button>
     </form>
     <div class="popup__links-wrap">
       <a class="popup__link" ><span>By registering you agree with</span> Terms of Use</a>
     </div>
-
-  <a (click)="setTemplate('nameInputTemplate')">next</a>
 
     <a class="popup__link-mob" (click)="openLogIn()">Log in</a>
   </ng-template>
@@ -47,36 +45,32 @@
     <ng-template #nameInputTemplate>
       <h6 class="popup__title">Registration</h6>
       <h4 class="popup__subtitle"></h4>
-      <form class="popup__form">
+      <form class="popup__form" [formGroup]="nameForm">
         <div >
           <div class="wrap-input popup__wrap-input">
             <input
               class="wrap-input__input"
               type="text"
+              formControlName="username"
+              [ngClass]="{'input--error': !nameForm.get('username').valid && nameForm.get('username').touched}"
             >
             <label class="wrap-input__label" for="">First name</label>
             <div class="wrap-input__line"></div>
-            <!--Input error section starts-->
-            <div>
-            <span class="wrap-input__message">
+
+            <div *ngIf="!nameForm.valid && nameSubmited">
+            <span class="wrap-input__message" *ngIf="nameForm.get('username').errors['required']">
               This field is required.
             </span>
-              <span
-                class="wrap-input__message">
-              Please, enter valid name.
-            </span>
             </div>
-            <!--Input error section ends-->
           </div>
         </div>
 
-        <button class="btn popup__btn" >Create an account</button>
+        <button class="btn popup__btn" (click)="nameSubmit()">Create an account</button>
       </form>
       <div class="popup__links-wrap">
         <a class="popup__link" href="#"><span>By registering you agree with</span> Terms of Use</a>
       </div>
-      <a (click)="setTemplate('captchaTemplate')">next</a>
-      <a class="popup__link-mob" >Log in</a>
+      <a class="popup__link-mob" (click)="openLogIn()">Log in</a>
     </ng-template>
 
     <ng-template #captchaTemplate>
@@ -100,7 +94,6 @@
       </div>
       <a (click)="setTemplate('passwordTemplate')">next</a>
     </ng-template>
-
 
     <ng-template #passwordTemplate>
       <h6 class="popup__title">Email confirmed</h6>
